--- a/.github/workflows/ci_cmake.yml
+++ b/.github/workflows/ci_cmake.yml
@@ -79,8 +79,7 @@ jobs:
       run: cmake --build --preset ci
 
     - name: CMake test
-      run: ctest --parallel 2 --output-on-failure
-      working-directory: build
+      run: ctest --preset ci
 
     - name: CMake install (for examples)
       run: cmake --install build
@@ -126,8 +125,7 @@ jobs:
       run: cmake --build build
 
     - name: CMake test
-      run: ctest --parallel 2 --output-on-failure
-      working-directory: build
+      run: ctest --preset ci
 
     - name: CMake install (for examples)
       run: cmake --install build
