--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -27,11 +27,9 @@ if(NOT TARGET FORESTCLAW::FORESTCLAW)
 
 endif()
 
-# -- set environment string used for regression tests
-set(FCLAW_TEST_ENVIRONMENT "FCLAW_APPLICATIONS_BUILD_DIR=${PROJECT_BINARY_DIR};FCLAW_APPLICATIONS_SRC_DIR=${PROJECT_SOURCE_DIR}")
+# -- convenience variables for regression tests
 if(MPI_FOUND)
-    list(APPEND FCLAW_TEST_ENVIRONMENT "FCLAW_MPIRUN=${MPIEXEC_EXECUTABLE}")
-    list(APPEND FCLAW_TEST_ENVIRONMENT "FCLAW_MPI_TEST_FLAGS=${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS}")
+  set(FCLAW_MPIRUN ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS})
 endif()
 
 # --------------------------------------------
